<resources>
    <string name="app_name">BMI計算機</string>
    <string name="tv_t_old">年齢</string>
    <string name="tv_t_height">身長</string>
    <string name="tv_t_weight">体重</string>
    <string name="tv_u_old">歳</string>
    <string name="tv_u_height">cm</string>
    <string name="tv_u_weight">kg</string>
    <string name="bt_calculate">計算</string>
    <string name="bt_clear">クリア</string>
</resources>